tests/custom/STARIS_2022/operation-type-errors/party-type-error-03/stderr.expected
Error:
    party-type-error.essence:3:15:
  |
3 | such that b = party(false, P) 
  |               ^^^^^^^^^^^^^^^
Type error:
	Expected: set of int
	Got: set of bool

party-type-error.essence:3:28:
  |
3 | such that b = party(false, P) 
  |                            ^
Type error:
	Expected: partition from bool
	Got: partition from int

